--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <properties>
         <java.version>23</java.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
+<!--        <keycloak.version>25.0.3</keycloak.version>-->
     </properties>
 
     <dependencies>
@@ -80,6 +81,31 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- Keycloack -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <!--        <dependency>-->
+<!--            <groupId>org.keycloak</groupId>-->
+<!--            <artifactId>keycloak-spring-boot-starter</artifactId>-->
+<!--            <version>${keycloak.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.keycloak</groupId>-->
+<!--            <artifactId>keycloak-spring-security-adapter</artifactId>-->
+<!--            <version>${keycloak.version}</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <dependencyManagement>
