--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: kf-imapi-auth-gateway
+  main:
+    web-application-type: reactive
   security:
     oauth2:
       resource server:
@@ -17,11 +19,19 @@ spring:
             
 server:
   port: 8084
+  
+# ------------------------ Eureka --------------------------
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 
 # ------------------------ Logging ------------------------
 logging:
   level:
     org.springframework.security: trace
+    com.netflix.eureka: OFF
+    com.netflix.discovery: OFF
   pattern:
     console: "%d{dd-MM-yyyy HH:mm:ss} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n"
 
