--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
     oauth2:
       resource server:
         jwt:
-          issuer-uri: http://localhost:9091/realms/kf-imapi-realm
+          issuer-uri: http://localhost:9091/realms/imapi
       client:
         provider:
           keycloak:
-            issuer-uri: http://localhost:9091/realms/kf-imapi-realm
+            issuer-uri: http://localhost:9091/realms/imapi
         registration:
           keycloak:
             client-id: demo
@@ -19,6 +19,11 @@ spring:
             
 server:
   port: 8084
+  
+# ------------------------ Gateway --------------------------
+gateway:
+  # Configure it in a safe way like using a secret manager (K8s secrets, AWS Secrets Manager, etc)
+  internal-auth-secret: 1234
   
 # ------------------------ Eureka --------------------------
 eureka:
