--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,24 @@
             <version>3.1.2</version>
         </dependency>
 
+        <!-- Micrometer Tracing & Zipkin -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-observation</artifactId>
+            <version>1.13.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
