Groovy with Spock Integration tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,16 @@ spring:
 server:
   port: 8084
   
+# ------------------------ OpenApi --------------------------
+#springdoc:
+#  swagger-ui:
+#    path: /swagger-ui.html
+#    display-request-duration: true
+#    try-it-out-enabled: true
+#  api-docs:
+#    path: /v3/api-docs
+#  show-actuator: true
+
 # ------------------------ Observability (Micrometer) --------------------------
 management:
   tracing:
