--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
           keycloak:
             client-id: demo
             scope: openid
+    # Recommended to use cache in production environment
+#  cloud:
+#    loadbalancer:
+#      cache:
+#        caffeine:
+#          spec: maximumSize=100,expireAfterAccess=5m
   data:
     redis:
       host: localhost
@@ -66,7 +72,9 @@ eureka:
 # ------------------------ Logging ------------------------
 logging:
   level:
-    org.springframework.security: trace
+    org.springframework.security: info # trace | debug | info | warn | error | fatal | off
+    org.springframework.cloud.gateway: info
+    org.springframework.boot: info
     com.netflix.eureka: OFF
     com.netflix.discovery: OFF
   pattern:
